# migru-app

./: .env.example  .gitignore  .vercelignore  BUILD_FIX_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile.backend  FINAL_SUMMARY.md  FULLSTACK_DEPLOYMENT.md  GEMINI.md  IMPLEMENTATION_V2.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  STATUS.md  VERCEL_DEPLOYMENT.md  eslint.config.js  fly.toml  package-lock.json  package.json  render.yaml  start.sh  svelte.config.js  test_api.sh  vercel.json  vite.config.ts
backend/app/: agent.py  main.py  tools.py
src/: app.css
src/backend/: migrate_v1_to_v2.py  migru.db  pyproject.toml
src/backend/app/: agent.py  auth.py  database.py  main.py  main_v2.py  os.py  tools.py
src/backend/app/agents/: __init__.py  hume_integration.py  intervention.py  pattern_recognition.py  voice_analysis.py
src/frontend/: app.css  app.d.ts  app.html  hooks.server.ts
src/frontend/lib/: stores.ts  themes.js
src/frontend/lib/components/: BottomNav.svelte  ForecastCard.svelte  SideNav.svelte  Toast.svelte  TopAppBar.svelte  VoiceAgent.svelte
src/frontend/lib/utils/: voiceRecorder.ts
src/frontend/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/frontend/static/: manifest.json  sw.js
src/lib/: stores.ts
src/lib/components/: BottomNav.svelte  ForecastCard.svelte  SideNav.svelte  TopAppBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/active-relief/: +page.svelte
src/routes/forecast/: +page.svelte
src/routes/log/: +page.svelte
src/routes/settings/: +page.svelte
static/: manifest.json
(+8 files in other folders)
