[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.26",
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "hume>=0.13.6",
    "mistralai>=1.10.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
